--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>NetPets</title>
 </head>
 <body>
+	<h1> Index! Here are the pets: </h1>
     <ul id="ing">
 		{% for pet in pets %}
 		<li><img src={{pet.pet_picture}}>{{pet.pet_name}} {{pet.pet_species}}</li>
