--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,16 @@
 <head>
     <title>NetPets</title>
 </head>
+
 <body>
     <ul id="ing">
 		{% for pet in pets %}
-		<li><img src=uploads/{{pet.filename}}>{{pet.name}} {{pet.species}}</li>
+		<li>
+			<img src="{{ url_for('static', filename = 'uploads/'+pet.filename) }}"width="50%" height="50%">
+			<br>
+			{{pet.name}} 
+			<br>
+			{{pet.species}}</li>
 		{% endfor %}
 	</ul>
 </body>
