--- a/templates/addPet.html
+++ b/templates/addPet.html
@@ -4,6 +4,7 @@
     <title>NetPets - add a pet!</title>
 </head>
 <body>
+    <h1> Add a pet: <h1>
     <form method="POST" name="form" action="" enctype="multipart/form-data">
 	  <p><input type="file" name="file"></p>
 	  <p><input type= "text" name="petname"></p>
@@ -12,8 +13,7 @@
 	  <label for="species">Species</label>
       <p><input type="submit" value="Submit"></p>
     </form>
-
-	</form>
+    <p> To see all pets in the database, click <a href="/petlist">here.</a></p>
 
 </body>
 </html>
