Prettified webpages by extending base template

--- a/templates/addPet.html
+++ b/templates/addPet.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}Flasky{% endblock %}
+
+{% block page_content %}
+
 <!doctype html>
 <html>
 <head>
@@ -17,3 +24,5 @@
 
 </body>
 </html>
+
+{% endblock  %}
