--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flasky</a>
+            <a class="navbar-brand" href="/">NetPets!</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/addPet">Add a pet!</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/signup">Admin login</a></li>
             </ul>
         </div>
     </div>
