--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}NetPets{% endblock %}
+
+{% block page_content %}
+
 <!doctype html>
 <html>
 <head>
@@ -12,3 +19,5 @@
 	</ul>
 </body>
 </html>
+	
+{% endblock  %}
