added index page, fixed nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,10 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/addPet">Add a Pet</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="/addPet">Add a pet!</a></li>
+                <li><a href="/petlist">Pet list</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li><a href="/signup">Admin login</a></li>
