--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,7 @@
 </head>
 
 <body>
-	<h1> Index! Here are the pets: </h1>
-    <ul id="ing">
-		{% for pet in pets %}
-		<li>
-			<img src="{{ url_for('static', filename = 'uploads/'+pet.filename) }}"width="50%" height="50%">
-			<br>
-			{{pet.name}} 
-			<br>
-			{{pet.species}}</li>
-		{% endfor %}
-	</ul>
+	<h1> Welcome to NetPets! </h1>
 </body>
 </html>
 	
