--- a/templates/base.html
+++ b/templates/base.html
@@ -18,17 +18,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">NetPets!</a>
+            <a class="navbar-brand" href="/">Flasky</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/addPet">Add a Pet</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="/petlist">Pet list</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="/signup">Admin login</a></li>
+                <li><a href="/">Home</a></li>
             </ul>
         </div>
     </div>
