--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,3 @@
-{% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-
-{% block title %}NetPets{% endblock %}
-
-{% block page_content %}
-
 <!doctype html>
 <html>
 <head>
@@ -12,8 +5,15 @@
 </head>
 
 <body>
-	<h1> Welcome to NetPets! </h1>
+    <ul id="ing">
+		{% for pet in pets %}
+		<li>
+			<img src="{{ url_for('static', filename = 'uploads/'+pet.filename) }}"width="50%" height="50%">
+			<br>
+			{{pet.name}} 
+			<br>
+			{{pet.species}}</li>
+		{% endfor %}
+	</ul>
 </body>
 </html>
-	
-{% endblock  %}
