--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,11 @@
 
     {% block page_content %}{% endblock %}
 </div>
+{% block footer %}
+<p> Made for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.  </p>
 {% endblock %}
+{% endblock %}
+
 
 {% block scripts %}
 {{ super() }}
