--- a/templates/base.html
+++ b/templates/base.html
@@ -22,14 +22,27 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/addPet">Add a Pet</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
                 <li><a href="/petlist">Pet list</a></li>
             </ul>
+            {% if current_user.is_anonymous %}
             <ul class="nav navbar-nav">
-                <li><a href="/signup">Admin login</a></li>
+                <li><a href="/register/">Register</a></li>
             </ul>
+                <ul class="nav navbar-nav">
+                <li><a href="/login">Login</a></li>
+            </ul>
+                {% else %}    
+            <ul class="nav navbar-nav">
+                <li><a href="/logout">Logout {{current_user.username}}</a></li>
+            </ul>
+            {% if current_user.admin == True %}
+            <ul class="nav navbar-nav">
+                <li><a href="/addPet">Add pets</a></li>
+            </ul>
+            {% endif %}
+        {% endif %}
+
+            
         </div>
     </div>
 </div>
