--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
 
 {% block head %}
 {{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ url_for('static', filename='walter.ico') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='walter.ico') }}" type="image/x-icon">
 {% endblock %}
 
 {% block navbar %}
@@ -60,7 +60,9 @@
     {% block page_content %}{% endblock %}
 </div>
 {% block footer %}
-<p><br>Made for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.  </p>
+<div class="container">
+<p>Made for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
+</div>
 {% endblock %}
 {% endblock %}
 
