--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
+<div class="container">
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
@@ -14,4 +15,6 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+</div>
+
 {% endblock %}
