added footer separator, tweaking addpet function

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,7 @@
     {% block page_content %}{% endblock %}
 </div>
 {% block footer %}
+<hr class="solid">
 <div class="container">
 <p>Made with ❤ for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
 </div>
