--- a/templates/addPet.html
+++ b/templates/addPet.html
@@ -11,13 +11,21 @@
     <title>NetPets - add a pet!</title>
 </head>
 <body>
-    <h1> Add a pet: </h1>
+    <h1> Add a pet</h1>
     <form method="POST" name="form" action="" enctype="multipart/form-data">
-	  <p><input type="file" name="file"></p>
-	  <p><input type= "text" name="petname"></p>
-	  <label for="petname">Pet name</label>
-	  <p><input type="text" name="species" ></p>
-	  <label for="species">Species</label>
+      <p><input type="file" name="file"></p>
+      
+
+      <br>
+      <label for="petname">Pet name</label>
+      <p><input type= "text" name="petname"></p>
+      
+      <label for="species">Species</label>
+      <p><input type="text" name="species" ></p>
+      
+      <label for="age">Age</label>
+	  <p><input type="text" name="age" ></p>
+      
       <p><input type="submit" value="Submit"></p>
     </form>
     <p> To see all pets in the database, click <a href="/petlist">here.</a></p>
