--- a/templates/petList.html
+++ b/templates/petList.html
@@ -11,6 +11,12 @@
     <title>NetPets</title>
 </head>
 
+<div class="page-header">
+	<div class="container">
+		<h1>Pet List</h1>
+	</div>
+</div>
+
 <body>
 	<form method="POST" name="form" action="" enctype="multipart/form-data">
 		<label for="species"> Species: </label>
