--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
+
+<div class="page-header">
+	<div class="container">
+		<h1>Sign In</h1>
+	</div>
+</div>
+
 <div class="container">
-    <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
