--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
+{% block title %}NetPets{% endblock %}
 
 {% block content %}
     
+    <div class="page-header">
+        <div class="container">
+            <h1>Register</h1>
+        </div>
+    </div>
     <div class="container">
-        <h1>Register</h1>
         <form action="" method="post">
             {{ form.hidden_tag() }}
             <p>
