attempted db tweaks, static page updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -95,7 +95,7 @@
     {% block footer %}
         <footer>
             <hr class="solid" style="color: rgb(0, 0, 0);">
-            <div class="container">
+            <div class="container" style="color: gray;">
                 <p>Made with ❤ for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
             </div>
         </footer>
@@ -108,3 +108,10 @@
 {{ super() }}
 {{ moment.include_moment() }}
 {% endblock %}
+
+{% block styles %}
+{{ super() }}
+<style>
+    .navbar-nav{color: blue;}
+</style> 
+{% endblock styles %}
