finished static dog adoption page

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
         <footer>
             <hr class="solid" style="color: rgb(0, 0, 0);">
             <div class="container" style="color: gray;">
-                <p>Made with ❤ for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
+                <p>Made with 100% organic ❤ for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
             </div>
         </footer>
         
