--- a/templates/addPet.html
+++ b/templates/addPet.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky{% endblock %}
-
 {% block page_content %}
 
 <!doctype html>
 <html>
-<head>
-    <title>NetPets - add a pet!</title>
-</head>
+<div class="page-header">
+	<div class="container">
+		<h1>Add a Pet</h1>
+	</div>
+</div>
 <body>
     <h1> Add a pet: <h1>
     <form method="POST" name="form" action="" enctype="multipart/form-data">
