--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,16 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}NetPets{% endblock %}
 
 {% block head %}
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link rel="stylesheet" href="../static/css/styles.css">
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,37 +19,86 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">NetPets!</a>
+            <a class="navbar-brand" href="{{url_for('index')}}">NetPets!</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/addPet">Add a Pet</a></li>
+                <li><a href="/petlist">Pet List</a></li>
             </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="/petlist">Pet list</a></li>
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown">
+                    <a href = '#' class="dropdown-toggle" data-toggle = "dropdown">
+                        <!-- <img src = "walter.ico"> -->
+                        Adoption Guides <b class= "caret"></b>
+                    </a>
+                    <ul class = "dropdown-menu">
+                                    <ul class="nav navbar-nav">
+                                        <li><a href="/adoptdog">Dogs</a></li>
+                                    </ul>
+                    </ul>
+                </li> 
             </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="/signup">Admin login</a></li>
+            {% if current_user.admin == True %}
+                <ul class="nav navbar-nav">
+                <li><a href="/addPet">Add pets</a></li>
+                </ul>
+            {% endif %}
+
+
+            
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href = '#' class="dropdown-toggle" data-toggle = "dropdown">
+                        <!-- <img src = "walter.ico"> -->
+                        Account <b class= "caret"></b>
+                    </a>
+                    <ul class = "dropdown-menu">
+                        {% if current_user.is_anonymous %}
+                                    <ul class="nav navbar-nav">
+                                        <li><a href="/register/">Register</a></li>
+                                    </ul>
+                                    <ul class="nav navbar-nav">
+                                        <li><a href="/login">Login</a></li>
+                                    </ul>
+                                    {% else %}    
+                            <ul class="nav navbar-nav">
+                            <li><a href="/logout">Logout {{current_user.username}}</a></li>
+                            </ul>
+
+                        {% endif %}
+                    </ul>
+                </li>
             </ul>
+
+            
         </div>
     </div>
 </div>
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
 
-    {% block page_content %}{% endblock %}
-</div>
-{% block footer %}
-<p> Made for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.  </p>
-{% endblock %}
+        {% block page_content %}{% endblock %}
+    </div>
+
+
+    {% block footer %}
+        <footer>
+            <hr class="solid" style="color: rgb(0, 0, 0);">
+            <div class="container" style="color: gray;">
+                <p>Made with 100% organic ❤ for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
+            </div>
+        </footer>
+        
+    {% endblock %}
 {% endblock %}
 
 
@@ -56,3 +106,10 @@
 {{ super() }}
 {{ moment.include_moment() }}
 {% endblock %}
+
+{% block styles %}
+{{ super() }}
+<style>
+    .navbar-nav{color: blue;}
+</style> 
+{% endblock styles %}
