--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<section id="image-header">
-		<h1> <center>Improve your life - find your perfect pet.</center> </h1>
+		<h1> <center>Improve your life. Find your perfect pet.</center> </h1>
 		<center>
 			<div style="padding-right: 80px; padding-left: 80px;">
 			<table cellpadding="10">
@@ -22,7 +22,7 @@
 		</center>
 	</section>
 	<section id="previews">
-		<h2> {{petcount}}+ Pets In Need of Adoption: </h2>
+		<h2> There are {{petcount}} pets in need of adoption today!</h2>
 		<ul>
 			{% for pet in previews %}
 			<li>
