--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,9 +2,101 @@ body {
 	background-color: #cff2e0;
 }
 
+
+
+/* navbar */
+
 .navbar {
 	margin-bottom: 0px;
 }
+
+
+
+/* .navbar-default {
+	background-color: #407359;
+	border-color: #89f4bd;
+}
+
+.navbar-default .navbar-brand {
+	color: #cff2e0;
+}
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+	color: #407359;
+}
+
+.navbar-default .navbar-text {
+	color: #cff2e0;
+}
+
+.navbar-default .navbar-nav>li>a {
+	color: #cff2e0;
+}
+
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus {
+	color: #407359;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+	color: #407359;
+	background-color: #89f4bd;
+}
+
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:hover,
+.navbar-default .navbar-nav>.open>a:focus {
+	color: #407359;
+	background-color: #89f4bd;
+}
+
+.navbar-default .navbar-toggle {
+	border-color: #89f4bd;
+}
+
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+	background-color: #89f4bd;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+	background-color: #cff2e0;
+}
+
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+	border-color: #cff2e0;
+}
+
+.navbar-default .navbar-link {
+	color: #cff2e0;
+}
+
+.navbar-default .navbar-link:hover {
+	color: #407359;
+}
+
+@media (max-width: 767px) {
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
+		color: #cff2e0;
+	}
+
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
+		color: #407359;
+	}
+
+	.navbar-default .navbar-nav .open .dropdown-menu>.active>a,
+	.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
+	.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
+		color: #407359;
+		background-color: #89f4bd;
+	}
+}
+ */
 
 .site-container {
 	width: 90%;
