Added update and delete
Also added button for quickly changing status to adopted, and hyperlinks on homepage work

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
 		<center>
 			<div style="padding-right: 80px; padding-left: 80px;">
 			<table cellpadding="10">
-				<tr><a href="/"> Dogs </a> </tr>
-				<tr><a href="/"> Cats </a></tr>
-				<tr><a href="/"> Small Mammals </a></tr>
-				<tr><a href="/"> Birds </a></tr>
-				<tr><a href="/"> Reptiles </a></tr>
+				<tr><a href="/dogs"> Dogs </a> </tr>
+				<tr><a href="/cats"> Cats </a></tr>
+				<tr><a href="/smalls"> Small Mammals </a></tr>
+				<tr><a href="/birds"> Birds </a></tr>
+				<tr><a href="/reptiles"> Reptiles </a></tr>
 			</table>
 
 			</div>
