--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -203,6 +203,11 @@ a:hover {
 	width: 50%;
 }
 
+body {
+	/* Margin bottom by footer height */
+	margin-bottom: 60px;
+}
+
 .footer {
 	position: absolute;
 	bottom: 0;
