--- a/templates/addPet.html
+++ b/templates/addPet.html
@@ -13,15 +13,9 @@
 </div>
 <body>
 
+    <div class="table-responsive-md">
       <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
+
         <tbody>
           <tr>
             <th scope="row"><label for="petname">Pet name</label></th>
@@ -40,25 +34,75 @@
             <td><input type="radio" id="small" name="species" value="2"> <label for="small">Small Mammal</label> </td>
             <td><input type="radio" id="bird" name="species" value="3"> <label for="bird">Bird</label> </td>
             <td><input type="radio" id="reptile" name="species" value="4"> <label for="reptile">Reptile</label> </td>
-            <td><input type="radio" id="fish" name="species" value="5">< label for="fish">Fish</label> </td>
+            <td><input type="radio" id="fish" name="species" value="5"><label for="fish">&nbsp;Fish</label> </td>
             <td><input type="radio" id="other" name="species" value="6"> <label for="other">Other</label> </td>
           </tr>
 
           <tr>
+            <th scope="row"><label for="breed">Pet breed (if applicable)</label></th>
+            <td><input type= "text" name="breed"></td>
+          </tr>
 
+          <tr>
+            <th scope="row">Pet age</th>
+            <td><input type="radio" id="baby" name="age" value="0"><label for="baby">&nbsp;Baby</label></td>
+            <td><input type="radio" id="young" name="age" value="1"><label for="young">&nbsp;Young Adult</label></td>
+            <td><input type="radio" id="adult" name="age" value="2"><label for="adult">&nbsp;Adult</label></td>
+            <td><input type="radio" id="elder" name="age" value="3"><label for="elder">&nbsp;Elder</label></td>
+          </tr>
+
+          <tr>
+            <th scope="row">Pet sex</th>
+            <td><input type="radio" id="m" name="sex" value="0"><label for="m">Male</label></td>
+            <td><input type="radio" id="f" name="sex" value="1"><label for="f">Female</label></td>
+            <td><input type="radio" id="x" name="sex" value="2"><label for="x">Sex Unknown</label></td>
+          </tr>
+
+          <tr>
+            <th scope="row">Is the pet spayed or neutered?</th>
+            <td><input type="radio" id="notSN" name="makeBabies" value="False"><label for="notSN">No</label></td>
+            <td><input type="radio" id="SN" name="makeBabies" value="True"><label for="SN">Yes</label></td>
           </tr>
           
+          <tr>
+            <th scope="row">Are the pet's vaccines up to date?</th>
+            <td><input type="radio" id="noShots" name="vaccinated" value="False"><label for="noShots">No</label></td>
+            <td><input type="radio" id="shots" name="vaccinated" value="True"><label for="shots">Yes</label></td>
+          </tr>
+
+          <tr>
+            <th scope="row">Is the pet good with children?</th>
+            <td><input type="radio" id="noKids" name="kidFriendly" value="False"><label for="noKids">No</label></td>
+            <td><input type="radio" id="kids" name="kidFriendly" value="True"><label for="kids">Yes</label></td>
+          </tr>
+          
+          <tr>
+            <th scope="row">Is the pet good with other pets?</th>
+            <td><input type="radio" id="noOtherPets" name="petFriendly" value="False"><label for="noOtherPets">No</label></td>
+            <td><input type="radio" id="otherPets" name="petFriendly" value="True"><label for="otherPets">Yes</label></td>
+          </tr>
+
+          <tr>
+            <th scope="row">Quick description of the pet</th>
+            <td><input type= "text" name="description"><label for="description"></label></td>
+          </tr>
 
         </tbody>
       </table>
+      <p><input type="submit" value="Submit"></p>
 
-    <!-- <form method="POST" name="form" action="" enctype="multipart/form-data"> -->
-	  <!-- <p><input type="file" name="file"></p> -->
+    </form>
+
+    </div>
+
+
+    <form method="POST" name="form" action="" enctype="multipart/form-data">
+	  <p><input type="file" name="file"></p>
 
 	  <!-- <p><input type= "text" name="petname"></p> -->
 	  <!-- <label for="petname">Pet name</label> -->
 
-	  <p><input type="radio" id="dog" name="species" value="0"></p>
+<!-- 	  <p><input type="radio" id="dog" name="species" value="0"></p>
       <label for="dog">Dog</label>
       <p><input type="radio" id="cat" name="species" value="1"></p>
       <label for="cat">Cat</label>
@@ -71,54 +115,54 @@
       <p><input type="radio" id="fish" name="species" value="5"></p>
       <label for="fish">Fish</label>
       <p><input type="radio" id="other" name="species" value="6"></p>
-      <label for="other">Other</label>
+      <label for="other">Other</label> -->
 
-      <p><input type= "text" name="breed"></p>
-      <label for="breed">Pet breed</label>
+      <!-- <p><input type= "text" name="breed"></p>
+      <label for="breed">Pet breed</label> -->
 
-	  <p><input type="radio" id="baby" name="age" value="0"></p>
+	  <!-- <p><input type="radio" id="baby" name="age" value="0"></p>
       <label for="baby">Baby</label>
       <p><input type="radio" id="young" name="age" value="1"></p>
       <label for="young">Young Adult</label>
       <p><input type="radio" id="adult" name="age" value="2"></p>
       <label for="adult">Adult</label>
       <p><input type="radio" id="elder" name="age" value="3"></p>
-      <label for="elder">Elder</label>
+      <label for="elder">Elder</label> -->
     
-      <p><input type="radio" id="m" name="sex" value="0"></p>
+      <!-- <p><input type="radio" id="m" name="sex" value="0"></p>
       <label for="m">Male</label>
       <p><input type="radio" id="f" name="sex" value="1"></p>
       <label for="f">Female</label>
       <p><input type="radio" id="x" name="sex" value="2"></p>
-      <label for="x">Sex Unknown</label>
+      <label for="x">Sex Unknown</label> -->
    
-      <p><input type="radio" id="notSN" name="makeBabies" value="False"></p>
+      <!-- <p><input type="radio" id="notSN" name="makeBabies" value="False"></p>
       <label for="notSN">Not spayed/neutered</label>
       <p><input type="radio" id="SN" name="makeBabies" value="True"></p>
-      <label for="SN">Spayed/neutered</label>
+      <label for="SN">Spayed/neutered</label> -->
 
-      <p><input type="radio" id="noShots" name="vaccinated" value="False"></p>
+      <!-- <p><input type="radio" id="noShots" name="vaccinated" value="False"></p>
       <label for="noShots">Needs vaccinations</label>
       <p><input type="radio" id="shots" name="vaccinated" value="True"></p>
-      <label for="shots">Up to date on vaccinations</label>
+      <label for="shots">Up to date on vaccinations</label> -->
 
-      <p><input type="radio" id="noKids" name="kidFriendly" value="False"></p>
+      <!-- <p><input type="radio" id="noKids" name="kidFriendly" value="False"></p>
       <label for="noKids">Not good with children</label>
       <p><input type="radio" id="kids" name="kidFriendly" value="True"></p>
-      <label for="kids">Good with children</label>
+      <label for="kids">Good with children</label> -->
 
-      <p><input type="radio" id="noOtherPets" name="petFriendly" value="False"></p>
+<!--       <p><input type="radio" id="noOtherPets" name="petFriendly" value="False"></p>
       <label for="noOtherPets">Not good with other pets</label>
       <p><input type="radio" id="otherPets" name="petFriendly" value="True"></p>
-      <label for="otherPets">Good with other pets</label>
+      <label for="otherPets">Good with other pets</label> -->
 
-      <p><input type= "text" name="description"></p>
-      <label for="description">Pet description</label>
+<!--       <p><input type= "text" name="description"></p>
+      <label for="description">Pet description</label> -->
    
       
-      <p><input type="submit" value="Submit"></p>
+<!--       <p><input type="submit" value="Submit"></p>
 
-    </form>
+    </form> -->
     <p> To see all pets in the database, click <a href="/petlist">here.</a></p>
 
 </body>
