--- a/templates/base.html
+++ b/templates/base.html
@@ -95,13 +95,11 @@
 
 
     {% block footer %}
-        <footer>
-            <div class="footer">
+        <footer class = "footer">
                 <hr class="solid">
                 <div class="container" style="color:#d6d6d6">
                     <p>Made with 100% organic ❤ for CSC 210 by Adi Tangirala, Ariel Hirschhorn, Ella Apykhtin, and Katie Karabetsos.</p>
                 </div>
-            </div>
         </footer>
         
     {% endblock %}
