--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
     
     <div class="page-header">
         <div class="container">
-            <h1>Register</h1>
+            <br><h1>Register</h1>
         </div>
     </div>
     <div class="container">
